# autobot-v2

./: .gitignore  LICENSE  README.md  frames_2026-04-12_04.05.29.gv  na.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/config/: diff_drive_controller.yaml
src/robot_bringup/launch/: bringup.launch.py  robot.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/meshes/: base_link.stl  left_front_wheel.stl  left_rear_wheel.stl  lidar.stl  right_front_wheel.stl  right_rear_wheel.stl
src/robot_description/urdf/: robot.urdf.xacro  ros2_control.xacro
src/robot_hardware/: CMakeLists.txt  package.xml  plugin.xml
src/robot_hardware/include/robot_hardware/: hardware_interface.hpp
src/robot_hardware/src/: hardware_interface.cpp
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: slam.yaml
src/robot_navigation/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
src/robot_navigation/maps/: my_room.pgm  my_room.yaml
